# pertergrin-svn

branches/start/pertergrin/docs/concept/: mapeditwidget-concept.txt  mapeditwidget-doc.txt  spells-german-concept.txt
branches/start/pertergrin/editor/: mapeditor.glade
branches/start/pertergrin/editor/mapeditwidget/: Makefile
branches/suamor/pertergrin/: ChangeLog
branches/suamor/pertergrin/docs/concept/: editor-concept.lyx  gamerules-concept.lyx
branches/suamor/pertergrin/editor/: mapeditor.glade
branches/suamor/pertergrin/editor/mapeditwidget/: mapeditclass.c  mapeditclass.h  testmapedit.c
trunk/pertergrin/: AUTHORS  BUGS  ChangeLog  Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  mkinstalldirs
trunk/pertergrin/docs/concept/: abilities.txt  datastructure.txt  editor-concept.lyx  gui-dynamic.txt  map-drawing.txt  mapeditwidget-sextant-german.txt  module-integration.txt
trunk/pertergrin/editor/: ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  Pertergrin.prj  README  TODO  callbacks.c  callbacks.h  config.h.in  configure.in  editor.c  editor.h  files.c  files.h  gui.c  gui.h
trunk/pertergrin/editor/gui/: Makefile.am  Makefile.in  abilitydialog.glade  componentgroupdialog.glade  dungeondialog.glade  dungeonpartdialog.glade  landscapepartdialog.glade  maingroupdialog.glade  maingroupdialog.gladep  mainwindow.cc  mainwindow.glade  mainwindow.h  mapdrawarea.cc  mapdrawarea.h  npclistdialog.glade  selectwindow.glade  towndialog.glade  townpartdialog.glade  worlddialog.cc  worlddialog.glade  worlddialog.h
trunk/pertergrin/editor/kernel/: Makefile.am  Makefile.in  app.cc  app.h  main.cc  ptgtypes.h  world.cc  world.h
trunk/pertergrin/editor/mapeditwidget/: Makefile  mapeditclass.c  mapeditclass.h  testmapedit.c  testmapedit.glade
trunk/pertergrin/editor/po/: POTFILES.in
trunk/pertergrin/game/: gd.sql
